# rails

./: .gitignore  LICENSE  README.md  Untitled  code.txt  debug.txt  debug2.txt  dune-project  from_manual.txt  game0.sav  game1.sav  game2.sav  game3.sav  game4.sav  game5.sav  notes.txt  out.txt  rails.opam  rails.opam.locked  readme.md  save.txt  sprites.txt  technical_documentation.md  todo.md  wood2.txt
src/: .gitignore  .merlin  FONTS.RR  Mapview_d.ml  backend.ml  bitset.ml  bitset.mli  covert_run.ml  dir.ml  dune  ega.ml  event.ml  font.ml  font_dump.ml  fonts.ml  frontend.ml  game.ml  game_map.ml  gmap.ml  goods.ml  graphics.ml  lzw.ml  main.ml  main_run.ml  main_ui.ml  main_ui_d.ml  mainloop.ml  map.ml  mapgen.ml  mapview.ml  menu.ml  my_gen.ml  notes.txt  pani.ml  pani_anim.ml  pani_dump.ml  pani_interp.ml  pic.ml  pic_dump.ml  png.ml  (+13 more)
src/anim/: pani_interp.ml
src/backend/: backend.ml  constants.ml  goods.ml  segment.mli  track_graph.ml  train.ml
src/covert/: dune  game_modules.ml  main.ml
src/covert/game/: action.ml  agent.ml  agent_d.ml  agent_id.ml  agent_names.ml  break_in.ml  briefing.ml  building.ml  case.ml  case_clue.ml  case_d.ml  case_init.ml  case_time.ml  city.ml  clue.ml  clue_d.ml  constants.ml  crime.ml  difficulty.ml  event.ml  event_d.ml  event_id.ml  gender.ml  hq.ml  intro.ml  investigate.ml  item.ml  known_data.ml  loc.ml  location.ml  main.ml  mastermind.ml  org.ml  org_id.ml  rank.ml  region.ml  role.ml  role_d.ml  services.ml  start.ml  (+5 more)
src/covert/screen/: briefing.ml  bulletin_d.ml  folder_view.ml  intro.ml  time_pass.ml
src/covert/ui/: face.ml  fonts.ml  game_modules.ml  menu.ml  resources.ml  textures.ml
src/covert/utils/: subst_engine.ml  utils.ml
src/engine/: dune  mainloop.ml
src/engine/pani/: pani.ml  pani_const.ml  pani_format.md  pani_interp.ml  pani_render.ml  pani_sprite.ml
src/engine/ui/: fonts.ml  menu.ml  text_entry.ml  transition.ml
src/engine/utils/: bitset.ml  bitset.mli  cat_file.ml  dir.ml  ega.ml  event.ml  int_id.ml  lzw.ml  my_gen.ml  opengl.ml  pic.ml  renderer.ml  sound.ml  string.ml  utils.ml
src/images/: BRITAIN.PIC  COUNCIL.PIC  CREDITS2.PIC  DIFFS.PIC  DIFFSP.PIC  EASTUS.PIC  ELOCOS0.PIC  ELOCOS1.PIC  ELOCOS2.PIC  ELOCOS3.PIC  ENGFLDM.PAN  ESPCGA.PIC  EUROPE.PIC  FACES.PIC  FLOODM.PAN  IRONM.PAN  LABS.PIC  LOCOS.PIC  LOCOS2.PIC  LOGO.PIC  PAGE0.PIC  PAGE1.PIC  PAGE2.PIC  PAGE3.PIC  PAGE4.PIC  PAGE5.PIC  PAGE6.PIC  PAGE7.PIC  PAGE8.PIC  PAGE9.PIC  SPRITES.PIC  STATION.PIC  TITLEM.PAN  TRACKS.PIC  TRACKSC.PIC  WESTUS.PIC  WOOD2.PAN  WRECKM.PAN
src/lzw/: .merlin  dune  lzw.ml  lzw.mli
src/rails_lib/: dune  jobs.ml  main.ml  mainloop.ml  mapgen.ml  state.ml
src/rails_lib/anim/: pani.ml  pani_anim.ml  pani_interp.ml  pani_render.ml  pani_sprite.ml
src/rails_lib/backend/: ai.ml  ai_player.ml  b_options.ml  backend.ml  backend_d.ml  backend_low.ml  balance_sheet.ml  balance_sheet_d.ml  block_map.ml  block_map_d.ml  bridge.ml  cheat_d.ml  cities.ml  climate.ml  constants.ml  end_of_year.ml  engine.ml  fiscal_period_end.ml  freight.ml  goods.ml  income_statement.ml  income_statement_d.ml  jobs.ml  money.ml  opponent.ml  owner.ml  params.ml  player.ml  priority_shipment.ml  region.ml  retirement_bonus.ml  retirement_bonus_d.ml  scan.ml  segment.ml  segment_map.ml  segment_map.mli  station.ml  stocks.ml  (+13 more)
src/tests/: block_map_test.ml  dune  scan_test.ml  test_common.ml  tile_map_test.ml  track_graph_test.ml
src/ui/: edit_train.ml  fonts.ml  main_ui_d.ml  mapview_d.ml
src/utils/: utils.ml
(+111 files in other folders)
