
(executable
  (public_name rails)
  (modules rails_run)
  (name rails_run)
  (libraries rails_lib)
  (modes exe)
  )

(executable
 (public_name covert)
 (modules covert_run)
 (name covert_run)
 (libraries covert)
 (modes exe)
 )

(alias
  (name rails)
  (deps rails_run.exe))

(alias
  (name covert)
  (deps covert_run.exe))

(env
  (dev
    (flags (:standard -warn-error -A -w -30))))
