(include_subdirs unqualified)
(library
  (name rails_lib)
  (libraries iter containers containers-data gen imagelib imagelib.unix tsdl tsdl-mixer tgls.tgl3 owl-base ocamlgraph logs logs.fmt re)
  (inline_tests)
  (wrapped true)
  (preprocess
    (staged_pps ppx_import ppx_deriving.show ppx_deriving.enum ppx_deriving.eq ppx_deriving.ord ppx_hash ppx_yojson_conv ppx_expect ppx_inline_test ppx_update
                ppx_deriving_variant_string)
    )
  )

(env
  (dev
    (flags (:standard -warn-error -A -w -30))))
